--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,21 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <!-- <item name="android.datePickerDialogTheme">@style/datePickerTheme</item>
+        <item name="android.timePickerDialogTheme">@style/timePickerTheme</item> -->
+        
     </style>
+
+     <!-- <style name="datePickerTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#d41908</item>
+        <item name="colorControlActivated">#51bc28</item>
+        <item name="colorControlHighlight">#ba4b99</item>
+    </style>
+
+    <style name="timePickerTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#6d0fa4</item>
+        <item name="textColorPrimary">#1d7b06</item>
+    </style> -->
+
 
 </resources>
